logs/plambda.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PLambda-1.0.13.egg-info'...
Listing './lib/python3.5/site-packages/antlr4'...
Listing './lib/python3.5/site-packages/antlr4/atn'...
Listing './lib/python3.5/site-packages/antlr4/dfa'...
Listing './lib/python3.5/site-packages/antlr4/error'...
Listing './lib/python3.5/site-packages/antlr4/tree'...
Listing './lib/python3.5/site-packages/antlr4/xpath'...
Listing './lib/python3.5/site-packages/antlr4_python2_runtime-4.7.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/plambda'...
Listing './lib/python3.5/site-packages/plambda/actors'...
Compiling './lib/python3.5/site-packages/plambda/actors/actorlib.py'...
***   File "./lib/python3.5/site-packages/plambda/actors/actorlib.py", line 52
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/plambda/actors/console.py'...
***   File "./lib/python3.5/site-packages/plambda/actors/console.py", line 155
    print 'PLambda.rep Exception: ', e
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/plambda/antlr4'...
Listing './lib/python3.5/site-packages/plambda/eval'...
Compiling './lib/python3.5/site-packages/plambda/eval/Continuation.py'...
***   File "./lib/python3.5/site-packages/plambda/eval/Continuation.py", line 83
    print self.excep
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/plambda/eval/PLambda.py'...
***   File "./lib/python3.5/site-packages/plambda/eval/PLambda.py", line 79
    print 'rep: line  = ', line
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/plambda/eval/State.py'...
***   File "./lib/python3.5/site-packages/plambda/eval/State.py", line 53
    print 'not atom: {0} {1} {2} {3}'.format(opexp, type(opexp), self.exp, self.exp.code)
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/plambda/util'...
Listing './lib/python3.5/site-packages/plambda/visitor'...
Compiling './lib/python3.5/site-packages/plambda/visitor/Parser.py'...
***   File "./lib/python3.5/site-packages/plambda/visitor/Parser.py", line 17
    print 'Usage: {0} <plambda file>'.format(sys.argv[0])
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/psutil'...
Listing './lib/python3.5/site-packages/psutil/tests'...
Listing './lib/python3.5/site-packages/psutil-5.4.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
